<?xml version="1.0"?>
<package format="2">
  <name>apsrc_camera</name>
  <version>1.0.0</version>
  <description>The apsrc_camera package</description>
  <author email="mbahramg@mtu.edu">Mojtaba Bahramgiri</author>
  <maintainer email="mbahramg@mtu.edu">Mojtaba Bahramgiri</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>apsrc_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>roslint</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
</package>